PN-7997 fix other tests